--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -112,21 +111,15 @@
     <h1>El Ray Tint Co.</h1>
     <p>"Respect the Ride. Tint with Pride."</p>
     <div class="badge">Veteran Owned</div>
-  </header>
-
-  <nav>
+  </header>  <nav>
     <a href="#services">Services</a>
     <a href="#booking">Booking</a>
     <a href="#gallery">Gallery</a>
     <a href="#contact">Contact</a>
-  </nav>
-
-  <section class="cta">
+  </nav>  <section class="cta">
     <h2>Book Your Tint Appointment Today</h2>
     <a href="#booking">Get Started</a>
-  </section>
-
-  <section id="services">
+  </section>  <section id="services">
     <h2>Our Services</h2>
     <ul>
       <li>Full Vehicle Tint</li>
@@ -134,9 +127,7 @@
       <li>Windshield Strip</li>
       <li>Standard Film or Ceramic Options</li>
     </ul>
-  </section>
-
-  <section id="booking">
+  </section>  <section id="booking">
     <h2>Book an Appointment</h2>
     <form>
       <input type="text" placeholder="Full Name" required />
@@ -159,19 +150,15 @@
       <textarea placeholder="Notes (optional)"></textarea>
       <button type="submit">Submit Booking Request</button>
     </form>
-  </section>
-
-  <section id="gallery">
+  </section>  <section id="gallery">
     <h2>Recent Tint Jobs</h2>
     <div class="gallery">
-      <img src="https://source.unsplash.com/featured/?tinted-car1" alt="Tint Job 1" />
-      <img src="https://source.unsplash.com/featured/?tinted-car2" alt="Tint Job 2" />
-      <img src="https://source.unsplash.com/featured/?tinted-car3" alt="Tint Job 3" />
-      <img src="https://source.unsplash.com/featured/?tinted-car4" alt="Tint Job 4" />
+      <img src="file_000000002a8c61f7af26d6210ddac57f" alt="Black Ferrari" />
+      <img src="file_000000009e2061f79054b5b489371970" alt="White Denali" />
+      <img src="file_000000002f9461f5a12e9ed9f31329c0" alt="Gray Truck" />
+      <img src="file_00000000bcf461f7af304e50b03cfcb6" alt="Candy Red Impala" />
     </div>
-  </section>
-
-  <section id="contact">
+  </section>  <section id="contact">
     <h2>Contact Us</h2>
     <form>
       <input type="text" placeholder="Your Name" required />
@@ -182,18 +169,3 @@
   </section>
 </body>
 </html>
-
-
-Site mockup updated! Ray’s demo site now includes:
-
-Services list
-
-Booking form with all the key fields
-
-Gallery using randomized tinted car photos
-
-Contact form
-
-
-It’s clean, mobile-ready, and showcases the “Veteran Owned” branding with pride. Want me to deploy a live demo site next so you can show him on your phone?
-
