--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
   </section>  <section id="gallery">
     <h2>Recent Tint Jobs</h2>
     <div class="gallery">
-      <img src="file_000000002a8c61f7af26d6210ddac57f" alt="Black Ferrari" />
-      <img src="file_000000009e2061f79054b5b489371970" alt="White Denali" />
-      <img src="file_000000002f9461f5a12e9ed9f31329c0" alt="Gray Truck" />
-      <img src="file_00000000bcf461f7af304e50b03cfcb6" alt="Candy Red Impala" />
+      <img src="https://raw.githubusercontent.com/Chronic-W-F/el-ray-tint/3452f4e19b64bbfcf9edf1c5c1fcd8d6f1e5b84c/file_000000002a8c61f7af26d6210ddac57f.png" alt="Black Ferrari" />
+      <img src="https://raw.githubusercontent.com/Chronic-W-F/el-ray-tint/refs/heads/main/file_000000009e2061f79054b5b489371970.png" alt="White Denali" />
+      <img src="https://raw.githubusercontent.com/Chronic-W-F/el-ray-tint/refs/heads/main/file_000000002f9461f5a12e9ed9f31329c0.png" alt="Gray Truck" />
+      <img src="https://raw.githubusercontent.com/Chronic-W-F/el-ray-tint/refs/heads/main/file_00000000bcf461f7af304e50b03cfcb6.png" alt="Candy Red Impala" />
     </div>
   </section>  <section id="contact">
     <h2>Contact Us</h2>
