--- a/index.html
+++ b/index.html
@@ -128,29 +128,9 @@
       <li>Standard Film or Ceramic Options</li>
     </ul>
   </section>  <section id="booking">
-    <h2>Book an Appointment</h2>
-    <form>
-      <input type="text" placeholder="Full Name" required />
-      <input type="tel" placeholder="Phone Number" required />
-      <input type="email" placeholder="Email Address" required />
-      <input type="text" placeholder="Vehicle Year / Make / Model" required />
-      <select required>
-        <option value="">Select Tint Package</option>
-        <option>Front Only</option>
-        <option>Full Vehicle</option>
-        <option>Windshield Strip</option>
-      </select>
-      <select required>
-        <option value="">Select Film Type</option>
-        <option>Standard</option>
-        <option>Ceramic</option>
-        <option>Limo Tint</option>
-      </select>
-      <input type="date" required />
-      <textarea placeholder="Notes (optional)"></textarea>
-      <button type="submit">Submit Booking Request</button>
-    </form>
-  </section>  <section id="gallery">
+  <h2>Book an Appointment</h2>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc0xrO7FB9I819N-qD5lTNETpP8JDGPjv-e6Y-tanUjUbUQiQ/viewform?embedded=true" width="100%" height="1688" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+</section>  <section id="gallery">
     <h2>Recent Tint Jobs</h2>
     <div class="gallery">
       <img src="https://raw.githubusercontent.com/Chronic-W-F/el-ray-tint/3452f4e19b64bbfcf9edf1c5c1fcd8d6f1e5b84c/file_000000002a8c61f7af26d6210ddac57f.png" alt="Black Ferrari" />
